# deeprust

./: README.md
code/: README.md
code/deeprust/: .build_project.sh.swp  Cargo.toml
code/deeprust/examples/: regularizer_sample.rs
code/deeprust/src/: lib.rs  macros.rs  main.rs
code/deeprust/src/metrics/: confusion_matrix.rs  mod.rs
code/deeprust/src/reg/: l2_reg.rs  mod.rs
code/docs/: Readme.md  confusion_matrix.md
code/rust_training/: Readme.md
code_of_conduct/: code_of_conduct.md
contributor/: CONTRIBUTOR.md
license/: LICENSE.md
open-canvas/: open-canvas.md
